release notes benerator 0.7.7
=============================

summary
-------


changes
-------


enhancements
------------
- Added indent property to ConsoleExporter


bug fixes
---------
- scope relates to wrong element